updated deprecated API call for creating a URL